--- a/unknown_ticrfg.main_cronscript.json
+++ b/unknown_ticrfg.main_cronscript.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ticrfg.main_cronscript",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ticrfg.main_cronscript",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561316929498,
-	"last_scraped": 1569043294961,
+	"last_scraped": 1569047684187,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561316929498
 		}
 	],
-	"next_scrape": 1569085470045,
+	"next_scrape": 1569090779584,
 	"category": "dice_roller",
-	"last_update": 1569043294961,
+	"last_update": 1569047684187,
 	"output": [
 		{
 			"args": {},
-			"calls": 3036541,
+			"calls": 3059879,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"T0X0B",
@@ -54,8 +54,8 @@
 			]
 		}
 	],
-	"updt": 1569039523703,
-	"edit": 304,
+	"updt": 1569043582165,
+	"edit": 305,
 	"identified": [
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
