--- a/unknown_qnouq5.sectors.json
+++ b/unknown_qnouq5.sectors.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_qnouq5.sectors",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_qnouq5.sectors",
 	"sector": "NGC_1495",
 	"sec_level": 4,
 	"date_added": 1561782074141,
-	"last_scraped": 1569043022888,
+	"last_scraped": 1569047271640,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561782074141
 		}
 	],
-	"next_scrape": 1569087615857,
+	"next_scrape": 1569091291077,
 	"category": "coin_flipper",
-	"last_update": 1569043022888,
+	"last_update": 1569047271640,
 	"output": [
 		{
 			"args": {},
-			"calls": 1725174,
+			"calls": 1747660,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"7_FILE",
@@ -58,8 +58,8 @@
 			]
 		}
 	],
-	"updt": 1569039073769,
-	"edit": 173,
+	"updt": 1569047258301,
+	"edit": 175,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
