--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_6mixmg.whitelist",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_6mixmg.whitelist",
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1569047632441,
+	"last_scraped": 1569051496100,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1569089790772,
+	"next_scrape": 1569092384161,
 	"category": "plant_sim",
-	"last_update": 1569047632441,
+	"last_update": 1569051496100,
 	"output": [
 		{
 			"args": {},
@@ -266,7 +266,7 @@
 		},
 		{
 			"args": {},
-			"calls": 9736,
+			"calls": 11957,
 			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n\n\n           \n           Á      ,\n            Ã  ÁÁ Á ÁÁ.\n           ÁÁÁÃ\\ÃÁ/ÁÃÁ)Á\n           ÁÁ. \\ÃÁÁÃ/Á.\n           ",
 			"fragments": [
 				"ould b",
@@ -304,6 +304,6 @@
 			]
 		}
 	],
-	"updt": 1569043582165,
-	"edit": 115
+	"updt": 1569047708681,
+	"edit": 116
 }
