--- a/unknown_aprmr6.acct.json
+++ b/unknown_aprmr6.acct.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_aprmr6.acct",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_aprmr6.acct",
 	"sector": "SPC_7402",
 	"sec_level": 4,
 	"date_added": 1562756729085,
-	"last_scraped": 1569048200700,
+	"last_scraped": 1569051898901,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562756729085
 		}
 	],
-	"next_scrape": 1569092618864,
+	"next_scrape": 1569093811243,
 	"category": "dice_roller",
-	"last_update": 1569048200700,
+	"last_update": 1569051898901,
 	"output": [
 		{
 			"args": {},
-			"calls": 3849510,
+			"calls": 3867900,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"you w",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1569044773419,
-	"edit": 389
+	"updt": 1569048382145,
+	"edit": 390
 }
