--- a/unknown_4xh4jz.db.json
+++ b/unknown_4xh4jz.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_4xh4jz.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_4xh4jz.db",
 	"sector": "K_7459",
 	"sec_level": 4,
 	"date_added": 1564371134260,
-	"last_scraped": 1569051213663,
+	"last_scraped": 1569055000217,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564371134260
 		}
 	],
-	"next_scrape": 1569091279617,
+	"next_scrape": 1569096525294,
 	"category": "dice_roller",
-	"last_update": 1569051213663,
+	"last_update": 1569055000217,
 	"output": [
 		{
 			"args": {},
-			"calls": 1936317,
+			"calls": 1956505,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"y more",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1569047258301,
-	"edit": 179
+	"updt": 1569051311015,
+	"edit": 180
 }
