--- a/uknown_ido5g4.free_vbucks.json
+++ b/uknown_ido5g4.free_vbucks.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_ido5g4.free_vbucks",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ido5g4.free_vbucks",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564080977341,
-	"last_scraped": 1569051515299,
+	"last_scraped": 1569055253160,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564080977341
 		}
 	],
-	"next_scrape": 1569097289749,
+	"next_scrape": 1569097692687,
 	"category": "coin_flipper",
-	"last_update": 1569051515299,
+	"last_update": 1569055253160,
 	"output": [
 		{
 			"args": {},
-			"calls": 1694988,
+			"calls": 1710468,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"sence",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1569047932799,
-	"edit": 164
+	"updt": 1569051536930,
+	"edit": 165
 }
