--- a/unknown_hz6ahx.scam.json
+++ b/unknown_hz6ahx.scam.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_hz6ahx.scam",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_hz6ahx.scam",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565877756940,
-	"last_scraped": 1569054869913,
+	"last_scraped": 1569058310854,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565877756940
 		}
 	],
-	"next_scrape": 1569098995563,
+	"next_scrape": 1569104362537,
 	"category": "plant_sim",
-	"last_update": 1569054869913,
+	"last_update": 1569058310854,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 81709,
+			"calls": 83276,
 			"base": "c:\"8naiyw\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"cards",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1569051311015,
-	"edit": 95
+	"updt": 1569058301854,
+	"edit": 97
 }
