--- a/uknown_wmfc11.is_fun.json
+++ b/uknown_wmfc11.is_fun.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_wmfc11.is_fun",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_wmfc11.is_fun",
 	"sector": "VNP_7552",
 	"sec_level": 4,
 	"date_added": 1562141954104,
-	"last_scraped": 1569058330610,
+	"last_scraped": 1569061571122,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562141954104
 		}
 	],
-	"next_scrape": 1569100173316,
+	"next_scrape": 1569107357976,
 	"category": "dice_roller",
-	"last_update": 1569058330610,
+	"last_update": 1569061571122,
 	"output": [
 		{
 			"args": {},
-			"calls": 3595375,
+			"calls": 3616467,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"to 0 ",
@@ -90,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1569054918032,
-	"edit": 349
+	"updt": 1569058528851,
+	"edit": 350
 }
