--- a/uknown_ypswbu.gbdis.json
+++ b/uknown_ypswbu.gbdis.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_ypswbu.gbdis",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ypswbu.gbdis",
 	"sector": "NGC_1037",
 	"sec_level": 4,
 	"date_added": 1564248854714,
-	"last_scraped": 1569058502002,
+	"last_scraped": 1569061670326,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564248854714
 		}
 	],
-	"next_scrape": 1569102338948,
+	"next_scrape": 1569105294394,
 	"category": "coin_flipper",
-	"last_update": 1569058502002,
+	"last_update": 1569061670326,
 	"output": [
 		{
 			"args": {},
-			"calls": 2341642,
+			"calls": 2362680,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ROG ER",
@@ -88,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1569055143736,
-	"edit": 220
+	"updt": 1569058528851,
+	"edit": 221
 }
