--- a/uknown_4ild70.market.json
+++ b/uknown_4ild70.market.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_4ild70.market",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_4ild70.market",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565595001116,
-	"last_scraped": 1569059465458,
+	"last_scraped": 1569062715016,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565595001116
 		}
 	],
-	"next_scrape": 1569104729280,
+	"next_scrape": 1569104193619,
 	"category": "coin_flipper",
-	"last_update": 1569059465458,
+	"last_update": 1569062715016,
 	"output": [
 		{
 			"args": {},
-			"calls": 2283174,
+			"calls": 2312001,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"se, s",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1569056948568,
-	"edit": 235
+	"updt": 1569059881009,
+	"edit": 236
 }
