--- a/uknown_tuh6rk.stealgc.json
+++ b/uknown_tuh6rk.stealgc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_tuh6rk.stealgc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_tuh6rk.stealgc",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565570384834,
-	"last_scraped": 1569062082021,
+	"last_scraped": 1569065229943,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1569104330687,
+	"next_scrape": 1569107075448,
 	"category": "dice_roller",
-	"last_update": 1569062082021,
+	"last_update": 1569065229943,
 	"output": [
 		{
 			"args": {},
-			"calls": 1853749,
+			"calls": 1873985,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"to ne",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1569058979467,
-	"edit": 200
+	"updt": 1569062135371,
+	"edit": 201
 }
