--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_c671te.quack",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_c671te.quack",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566460947728,
-	"last_scraped": 1569061963361,
+	"last_scraped": 1569065087296,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1569102144629,
+	"next_scrape": 1569106450378,
 	"category": "plant_sim",
-	"last_update": 1569061963361,
+	"last_update": 1569065087296,
 	"output": [
 		{
 			"args": {},
@@ -128,7 +128,7 @@
 		},
 		{
 			"args": {},
-			"calls": 31510,
+			"calls": 33228,
 			"base": "c:\"51m589\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Á Ã\n                ÁÁ\n                ",
 			"fragments": [
 				"T0XF4_",
@@ -151,6 +151,6 @@
 			]
 		}
 	],
-	"updt": 1569058979467,
-	"edit": 183
+	"updt": 1569062135371,
+	"edit": 184
 }
