--- a/uknown_lqxcau.bmp.json
+++ b/uknown_lqxcau.bmp.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.bmp",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_lqxcau.bmp",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 0,
+	"last_scraped": 1569086564724,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,8 +21,55 @@
 			}
 		]
 	],
-	"updt": 1569078225671,
-	"edit": 584,
+	"updt": 1569086560917,
+	"edit": 585,
 	"pl_output": "skriipts.bmp\n`FA bitmap renderer`\n\n`FUSAGE`\n\tPass an array of bytes as the parameter `Nd`.\n\n`FCAVEATS`\n\tOnly colors that are supported by hackmud with color codes will be rendered correctly, if the image contains a color that is not supported by hackmud, an allowed color with the closest hue will be used.\n\tThis only supports 8bpp and 24bpp formats with a BITMAPINFOHEADER.",
-	"next_scrape": 1569161526074
+	"next_scrape": 1569086624724,
+	"scrape_ct": 20,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569086564724,
+	"output": [
+		{
+			"args": {},
+			"calls": 91770,
+			"base": "skriipts.bmp\n`FA bitmap renderer`\n\n`FUSAGE`\n\tPass an array of bytes as the parameter `Nd`.\n\n`FCAVEATS`\n\tOnly colors that are supported by hackmud with color codes will be rendered correctly, if the image contains a color that is not supported by hackmud, an allowed color with the closest hue will be used.\n\tThis only supports 8bpp and 24bpp formats with a BITMAPINFOHEADER.",
+			"fragments": [
+				"you h",
+				"ke th",
+				"w you ",
+				"ur reque",
+				"19 your ",
+				".\\n1E22 ",
+				" that.\\n1"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"you h",
+						"ke th",
+						"w you ",
+						"ur reque",
+						"19 your ",
+						".\\n1E22 ",
+						" that.\\n1"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"you h",
+				"ke th",
+				"w you ",
+				"ur reque",
+				"19 your ",
+				".\\n1E22 ",
+				" that.\\n1"
+			]
+		}
+	]
 }
