--- a/uknown_lqxcau.lmalone.json
+++ b/uknown_lqxcau.lmalone.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.lmalone",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "player",
 	"script": "uknown_lqxcau.lmalone",
 	"sector": "K_2954",
 	"sec_level": 2,
 	"date_added": 1563655759056,
-	"last_scraped": 0,
+	"last_scraped": 1569086575062,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1569078451248,
-	"edit": 584,
+	"updt": 1569086560917,
+	"edit": 585,
 	"pl_output": "grrrrrrr",
-	"next_scrape": 1569167486982
+	"next_scrape": 1569172816256
 }
