--- a/uknown_lqxcau.service.json
+++ b/uknown_lqxcau.service.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.service",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "player",
 	"script": "uknown_lqxcau.service",
 	"sector": "K_5707",
 	"sec_level": 1,
 	"date_added": 1563655768919,
-	"last_scraped": 0,
+	"last_scraped": 1569086694335,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,6 +21,8 @@
 			}
 		]
 	],
-	"updt": 1563655883484,
-	"edit": 1
+	"updt": 1569086334758,
+	"edit": 2,
+	"pl_output": "Unexpected token u in JSON at position 0",
+	"next_scrape": 1569178430762
 }
