--- a/uknown_lqxcau.gummy.json
+++ b/uknown_lqxcau.gummy.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_lqxcau.gummy",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "uknown_lqxcau.gummy",
 	"sector": "HJG_5436",
 	"sec_level": 1,
@@ -21,6 +21,6 @@
 			}
 		]
 	],
-	"updt": 1568686193659,
-	"edit": 5
+	"updt": 1569086334758,
+	"edit": 6
 }
