--- a/uknown_92vtu0.mktable.json
+++ b/uknown_92vtu0.mktable.json
@@ -1,16 +1,20 @@
 {
 	"_id": "uknown_92vtu0.mktable",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_92vtu0.mktable",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088362076,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
-	]
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569088422076
 }
