--- a/uknown_xb5p8t.bot_brain.json
+++ b/uknown_xb5p8t.bot_brain.json
@@ -1,16 +1,44 @@
 {
 	"_id": "uknown_xb5p8t.bot_brain",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "uknown_xb5p8t.bot_brain",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569087970363,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 20,
+	"next_scrape": 1569088030363,
+	"category": "risk_factor",
+	"last_update": 1569087970363,
+	"output": [
+		{
+			"args": {},
+			"calls": 1361,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"oluti",
+				"nt, t",
+				"ce as",
+				"ple an",
+				"nd as ",
+				" solut",
+				"ept sol",
+				"e too gr"
+			]
 		}
 	]
 }
