--- a/uknown_56z58x.clear.json
+++ b/uknown_56z58x.clear.json
@@ -1,16 +1,39 @@
 {
 	"_id": "uknown_56z58x.clear",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_56z58x.clear",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088351788,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569088411788,
+	"category": "plant_sim",
+	"last_update": 1569088351788,
+	"output": [
+		{
+			"args": {},
+			"calls": 735,
+			"base": "c:\"ip9w6z\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"is st",
+				"ching",
+				"o us. ",
+				"ently. ",
+				"still ha",
+				"ferently",
+				"I've sta",
+				" still h"
+			]
 		}
 	]
 }
