--- a/uknown_ch50pw.blibs.json
+++ b/uknown_ch50pw.blibs.json
@@ -1,16 +1,138 @@
 {
 	"_id": "uknown_ch50pw.blibs",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_ch50pw.blibs",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569087840448,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1569087900448,
+	"category": "fishie_tank",
+	"last_update": 1569087840448,
+	"output": [
+		{
+			"args": {},
+			"calls": 7238,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"ike c",
+				"have a",
+				"games ",
+				"drink l",
+				"dogs_pl",
+				"ang? ##",
+				"e card g",
+				"## Not f"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						"ike c",
+						"have a",
+						"games ",
+						"drink l",
+						"dogs_pl",
+						"ang? ##",
+						"e card g",
+						"## Not f"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 759,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"ike c",
+				"have a",
+				"games ",
+				"drink l",
+				"dogs_pl",
+				"ang? ##",
+				"e card g",
+				"## Not f"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						"ike c",
+						"have a",
+						"games ",
+						"drink l",
+						"dogs_pl",
+						"ang? ##",
+						"e card g",
+						"## Not f"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 9997,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"ike c",
+				"have a",
+				"games ",
+				"drink l",
+				"dogs_pl",
+				"ang? ##",
+				"e card g",
+				"## Not f"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						"ike c",
+						"have a",
+						"games ",
+						"drink l",
+						"dogs_pl",
+						"ang? ##",
+						"e card g",
+						"## Not f"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+			"frags": [
+				"ike c",
+				"have a",
+				"games ",
+				"drink l",
+				"dogs_pl",
+				"ang? ##",
+				"e card g",
+				"## Not f"
+			]
 		}
 	]
 }
