--- a/uknown_o5vbyr.open.json
+++ b/uknown_o5vbyr.open.json
@@ -1,16 +1,152 @@
 {
 	"_id": "uknown_o5vbyr.open",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_o5vbyr.open",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569087889897,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1569087949897,
+	"category": "fishie_tank",
+	"last_update": 1569087889897,
+	"output": [
+		{
+			"args": {},
+			"calls": 10503,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"help ",
+				"e pro",
+				"data ",
+				"am to",
+				"ion po",
+				"curati",
+				"to help",
+				"stages ",
+				"ing wit",
+				" later s"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"help ",
+						"e pro",
+						"data ",
+						"am to",
+						"ion po",
+						"curati",
+						"to help",
+						"stages ",
+						"ing wit",
+						" later s"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 657,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"help ",
+				"e pro",
+				"data ",
+				"am to",
+				"ion po",
+				"curati",
+				"to help",
+				"stages ",
+				"ing wit",
+				" later s"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"help ",
+						"e pro",
+						"data ",
+						"am to",
+						"ion po",
+						"curati",
+						"to help",
+						"stages ",
+						"ing wit",
+						" later s"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 4597,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"help ",
+				"e pro",
+				"data ",
+				"am to",
+				"ion po",
+				"curati",
+				"to help",
+				"stages ",
+				"ing wit",
+				" later s"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"help ",
+						"e pro",
+						"data ",
+						"am to",
+						"ion po",
+						"curati",
+						"to help",
+						"stages ",
+						"ing wit",
+						" later s"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+			"frags": [
+				"help ",
+				"e pro",
+				"data ",
+				"am to",
+				"ion po",
+				"curati",
+				"to help",
+				"stages ",
+				"ing wit",
+				" later s"
+			]
 		}
 	]
 }
