--- a/unknown_7zlz3p.list.json
+++ b/unknown_7zlz3p.list.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_7zlz3p.list",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_7zlz3p.list",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1565331613626,
-	"last_scraped": 0,
+	"last_scraped": 1569087549641,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,7 +22,51 @@
 		]
 	],
 	"pl_output": "`phackmud` `tQuest Board`\n\nThis utility helps you get on your feet by providing rewards for completing in-game quests and objectives!\n\nSimply run: quest.run {name: \"quest_name\", s: #s.script.name, args: {}} when you want to complete a quest.\nThis allows us to monitor your progress and reward you once it's been complete!\n`pHint` When a script asks you to pass an argument, add it to `Nargs` instead\n\n`fOfficial` `tQuests`\n`c(These are quests created by the game developers)`\n\n- aon.memb3rs_only\n- pica.nubloops\n- skimmerite.learn_to_read\n- suborbital_airlines.bulletin\n- vacuum_rescue.responder\n",
-	"next_scrape": 1569156418025,
-	"updt": 1569076425802,
-	"edit": 1195
+	"next_scrape": 1569087609641,
+	"updt": 1569086334758,
+	"edit": 1196,
+	"scrape_ct": 18,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569087549641,
+	"output": [
+		{
+			"args": {},
+			"calls": 9862,
+			"base": "`phackmud` `tQuest Board`\n\nThis utility helps you get on your feet by providing rewards for completing in-game quests and objectives!\n\nSimply run: quest.run {name: \"quest_name\", s: #s.script.name, args: {}} when you want to complete a quest.\nThis allows us to monitor your progress and reward you once it's been complete!\n`pHint` When a script asks you to pass an argument, add it to `Nargs` instead\n\n`fOfficial` `tQuests`\n`c(These are quests created by the game developers)`\n\n- aon.memb3rs_only\n- pica.nubloops\n- skimmerite.learn_to_read\n- suborbital_airlines.bulletin\n- vacuum_rescue.responder\n",
+			"fragments": [
+				"iling ",
+				" and s",
+				"n ailin",
+				"ds of a",
+				" happen",
+				"nd econo"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"iling ",
+						" and s",
+						"n ailin",
+						"ds of a",
+						" happen",
+						"nd econo"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				"iling ",
+				" and s",
+				"n ailin",
+				"ds of a",
+				" happen",
+				"nd econo"
+			]
+		}
+	]
 }
