--- a/uknown_bofn3d.external_yg40iz.json
+++ b/uknown_bofn3d.external_yg40iz.json
@@ -1,16 +1,66 @@
 {
 	"_id": "uknown_bofn3d.external_yg40iz",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_bofn3d.external_yg40iz",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088843689,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569088903689,
+	"category": "plant_sim",
+	"last_update": 1569088843689,
+	"output": [
+		{
+			"args": {},
+			"calls": 840,
+			"base": "c:\"85lkwv\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"ly 28",
+				"OS/Co",
+				" and c",
+				"e') and",
+				"2062. E",
+				"d to hav",
+				"al asset"
+			],
+			"hits": [
+				{
+					"document": "Erin File",
+					"frags": [
+						"ly 28",
+						"OS/Co",
+						" and c",
+						"e') and",
+						"2062. E",
+						"d to hav",
+						"al asset"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Erin File",
+			"frags": [
+				"ly 28",
+				"OS/Co",
+				" and c",
+				"e') and",
+				"2062. E",
+				"d to hav",
+				"al asset"
+			]
 		}
 	]
 }
