--- a/uknown_oon5ym.q.json
+++ b/uknown_oon5ym.q.json
@@ -1,16 +1,61 @@
 {
 	"_id": "uknown_oon5ym.q",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "timeout",
 	"script": "uknown_oon5ym.q",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088411726,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 20,
+	"next_scrape": 1569169246224,
+	"category": "risk_factor",
+	"last_update": 1569088411726,
+	"output": [
+		{
+			"args": {},
+			"calls": 1089,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"f catc",
+				"\"msg\":\"",
+				"rminolog",
+				"global d",
+				"blem as ",
+				":\"This i",
+				"\"This is",
+				" hygiene"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 180,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"f catc",
+				"\"msg\":\"",
+				"rminolog",
+				"global d",
+				"blem as ",
+				":\"This i",
+				"\"This is",
+				" hygiene"
+			]
 		}
 	]
 }
