--- a/unknown_0axb7v.npc.json
+++ b/unknown_0axb7v.npc.json
@@ -1,16 +1,72 @@
 {
 	"_id": "unknown_0axb7v.npc",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_0axb7v.npc",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088443622,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569088503622,
+	"category": "plant_sim",
+	"last_update": 1569088443622,
+	"output": [
+		{
+			"args": {},
+			"calls": 488,
+			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"SUBJ ",
+				"'m in",
+				" in h",
+				"tive p",
+				"ted in",
+				"ested ",
+				"DY I'm",
+				" inter",
+				"s | BODY"
+			],
+			"hits": [
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						"SUBJ ",
+						"'m in",
+						" in h",
+						"tive p",
+						"ted in",
+						"ested ",
+						"DY I'm",
+						" inter",
+						"s | BODY"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+			"frags": [
+				"SUBJ ",
+				"'m in",
+				" in h",
+				"tive p",
+				"ted in",
+				"ested ",
+				"DY I'm",
+				" inter",
+				"s | BODY"
+			]
 		}
 	]
 }
