--- a/unknown_1fif7m.specs.json
+++ b/unknown_1fif7m.specs.json
@@ -1,16 +1,66 @@
 {
 	"_id": "unknown_1fif7m.specs",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_1fif7m.specs",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088894986,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569088954986,
+	"category": "plant_sim",
+	"last_update": 1569088894986,
+	"output": [
+		{
+			"args": {},
+			"calls": 806,
+			"base": "c:\"w9l07b\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"'re ma",
+				"un of m",
+				")\\n2040 ",
+				" You're ",
+				"e\\n203F :",
+				".\\n203E Y",
+				" of me\\n2"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"'re ma",
+						"un of m",
+						")\\n2040 ",
+						" You're ",
+						"e\\n203F :",
+						".\\n203E Y",
+						" of me\\n2"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"'re ma",
+				"un of m",
+				")\\n2040 ",
+				" You're ",
+				"e\\n203F :",
+				".\\n203E Y",
+				" of me\\n2"
+			]
 		}
 	]
 }
