--- a/unknown_8qfkzs.t3scrape.json
+++ b/unknown_8qfkzs.t3scrape.json
@@ -1,16 +1,66 @@
 {
 	"_id": "unknown_8qfkzs.t3scrape",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_8qfkzs.t3scrape",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088463780,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569088523780,
+	"category": "dice_roller",
+	"last_update": 1569088463780,
+	"output": [
+		{
+			"args": {},
+			"calls": 8989,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"ns ind",
+				"te\\n1E4",
+				"1E48 yo",
+				"t one? I",
+				"one? It'",
+				"8 you ar",
+				"e\\n1E47 P"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"ns ind",
+						"te\\n1E4",
+						"1E48 yo",
+						"t one? I",
+						"one? It'",
+						"8 you ar",
+						"e\\n1E47 P"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"ns ind",
+				"te\\n1E4",
+				"1E48 yo",
+				"t one? I",
+				"one? It'",
+				"8 you ar",
+				"e\\n1E47 P"
+			]
 		}
 	]
 }
