--- a/unknown_da6i0q.still_alive.json
+++ b/unknown_da6i0q.still_alive.json
@@ -1,16 +1,112 @@
 {
 	"_id": "unknown_da6i0q.still_alive",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_da6i0q.still_alive",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088493177,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1569088553177,
+	"category": "clicker",
+	"last_update": 1569088493177,
+	"output": [
+		{
+			"args": {},
+			"calls": 7491,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"receiv",
+				",\\n1E2",
+				"happy t",
+				"36 Is th",
+				"2A I am "
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"receiv",
+						",\\n1E2",
+						"happy t",
+						"36 Is th",
+						"2A I am "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 7491,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"receiv",
+				",\\n1E2",
+				"happy t",
+				"36 Is th",
+				"2A I am "
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"receiv",
+						",\\n1E2",
+						"happy t",
+						"36 Is th",
+						"2A I am "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 715,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"receiv",
+				",\\n1E2",
+				"happy t",
+				"36 Is th",
+				"2A I am "
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"receiv",
+						",\\n1E2",
+						"happy t",
+						"36 Is th",
+						"2A I am "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"receiv",
+				",\\n1E2",
+				"happy t",
+				"36 Is th",
+				"2A I am "
+			]
 		}
 	]
 }
