--- a/unknown_puquph.weather.json
+++ b/unknown_puquph.weather.json
@@ -1,16 +1,76 @@
 {
 	"_id": "unknown_puquph.weather",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_puquph.weather",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088513904,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569088573904,
+	"category": "coin_flipper",
+	"last_update": 1569088513904,
+	"output": [
+		{
+			"args": {},
+			"calls": 10811,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"ses. T",
+				"ion as",
+				"cesses",
+				"ir reli",
+				"as a co",
+				"technolo",
+				"e disrup"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ses. T",
+						"ion as",
+						"ir reli",
+						"as a co",
+						"technolo",
+						"e disrup"
+					]
+				},
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						"cesses"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"ses. T",
+				"ion as",
+				"ir reli",
+				"as a co",
+				"technolo",
+				"e disrup"
+			]
+		},
+		{
+			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+			"frags": [
+				"cesses"
+			]
 		}
 	]
 }
