--- a/unknown_z6bucy.ds.json
+++ b/unknown_z6bucy.ds.json
@@ -1,16 +1,138 @@
 {
 	"_id": "unknown_z6bucy.ds",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_z6bucy.ds",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088622738,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 17,
+	"next_scrape": 1569088682738,
+	"category": "fishie_tank",
+	"last_update": 1569088622738,
+	"output": [
+		{
+			"args": {},
+			"calls": 7693,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"ld 'w",
+				"e bra",
+				" | Pe",
+				"ood an",
+				"' be a",
+				"n't hav",
+				"Perhaps",
+				"thinking"
+			],
+			"hits": [
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"ld 'w",
+						"e bra",
+						" | Pe",
+						"ood an",
+						"' be a",
+						"n't hav",
+						"Perhaps",
+						"thinking"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 785,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"ld 'w",
+				"e bra",
+				" | Pe",
+				"ood an",
+				"' be a",
+				"n't hav",
+				"Perhaps",
+				"thinking"
+			],
+			"hits": [
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"ld 'w",
+						"e bra",
+						" | Pe",
+						"ood an",
+						"' be a",
+						"n't hav",
+						"Perhaps",
+						"thinking"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 11516,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"ld 'w",
+				"e bra",
+				" | Pe",
+				"ood an",
+				"' be a",
+				"n't hav",
+				"Perhaps",
+				"thinking"
+			],
+			"hits": [
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"ld 'w",
+						"e bra",
+						" | Pe",
+						"ood an",
+						"' be a",
+						"n't hav",
+						"Perhaps",
+						"thinking"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"frags": [
+				"ld 'w",
+				"e bra",
+				" | Pe",
+				"ood an",
+				"' be a",
+				"n't hav",
+				"Perhaps",
+				"thinking"
+			]
 		}
 	]
 }
