--- a/uknown_92vtu0.mktable.json
+++ b/uknown_92vtu0.mktable.json
@@ -16,5 +16,48 @@
 	"updt": 1569085661801,
 	"edit": 1,
 	"scrape_ct": 20,
-	"next_scrape": 1569088422076
+	"next_scrape": 1569088422076,
+	"category": "plant_sim",
+	"last_update": 1569088362076,
+	"output": [
+		{
+			"args": {},
+			"calls": 736,
+			"base": "c:\"c6k61e\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"irst.",
+				"ing pl",
+				"er\\n216",
+				" initia",
+				"s their ",
+				"\\n2166 TR"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"irst.",
+						"ing pl",
+						"er\\n216",
+						" initia",
+						"s their ",
+						"\\n2166 TR"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"irst.",
+				"ing pl",
+				"er\\n216",
+				" initia",
+				"s their ",
+				"\\n2166 TR"
+			]
+		}
+	]
 }
