--- a/uknown_g6pj2l.obtuse.json
+++ b/uknown_g6pj2l.obtuse.json
@@ -1,16 +1,63 @@
 {
 	"_id": "uknown_g6pj2l.obtuse",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_g6pj2l.obtuse",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088371431,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569088431431,
+	"category": "coin_flipper",
+	"last_update": 1569088371431,
+	"output": [
+		{
+			"args": {},
+			"calls": 5923,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"t? ## ",
+				"es wer",
+				"ences ",
+				" dont ",
+				"aid Mall",
+				" that de"
+			],
+			"hits": [
+				{
+					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						"t? ## ",
+						"es wer",
+						"ences ",
+						" dont ",
+						"aid Mall",
+						" that de"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+			"frags": [
+				"t? ## ",
+				"es wer",
+				"ences ",
+				" dont ",
+				"aid Mall",
+				" that de"
+			]
 		}
 	]
 }
