--- a/uknown_svndpj.specs.json
+++ b/uknown_svndpj.specs.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_svndpj.specs",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "uknown_svndpj.specs",
 	"sector": "NGC_1025",
 	"sec_level": 4,
@@ -12,5 +12,7 @@
 			"type": "added",
 			"when": 1569085645113
 		}
-	]
+	],
+	"updt": 1569085661801,
+	"edit": 1
 }
