--- a/unknown_0jkcl8.bot_scam_do_not_run.json
+++ b/unknown_0jkcl8.bot_scam_do_not_run.json
@@ -1,16 +1,140 @@
 {
 	"_id": "unknown_0jkcl8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_0jkcl8.bot_scam_do_not_run",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088885101,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 17,
+	"next_scrape": 1569088945101,
+	"category": "clicker",
+	"last_update": 1569088885101,
+	"output": [
+		{
+			"args": {},
+			"calls": 8666,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"X7A_S",
+				"ST0X7",
+				"31E46",
+				"XF227_F",
+				"SECT0XF",
+				"F_CLST0",
+				"BC7D172",
+				"7A_SECT0",
+				"0XBF_CLS"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"X7A_S",
+						"ST0X7",
+						"31E46",
+						"XF227_F",
+						"SECT0XF",
+						"F_CLST0",
+						"BC7D172",
+						"7A_SECT0",
+						"0XBF_CLS"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 7855,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"X7A_S",
+				"ST0X7",
+				"31E46",
+				"XF227_F",
+				"SECT0XF",
+				"F_CLST0",
+				"BC7D172",
+				"7A_SECT0",
+				"0XBF_CLS"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"X7A_S",
+						"ST0X7",
+						"31E46",
+						"XF227_F",
+						"SECT0XF",
+						"F_CLST0",
+						"BC7D172",
+						"7A_SECT0",
+						"0XBF_CLS"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 758,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"X7A_S",
+				"ST0X7",
+				"31E46",
+				"XF227_F",
+				"SECT0XF",
+				"F_CLST0",
+				"BC7D172",
+				"7A_SECT0",
+				"0XBF_CLS"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"X7A_S",
+						"ST0X7",
+						"31E46",
+						"XF227_F",
+						"SECT0XF",
+						"F_CLST0",
+						"BC7D172",
+						"7A_SECT0",
+						"0XBF_CLS"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"X7A_S",
+				"ST0X7",
+				"31E46",
+				"XF227_F",
+				"SECT0XF",
+				"F_CLST0",
+				"BC7D172",
+				"7A_SECT0",
+				"0XBF_CLS"
+			]
 		}
 	]
 }
