--- a/unknown_egmh9p.atria_delta.json
+++ b/unknown_egmh9p.atria_delta.json
@@ -1,16 +1,61 @@
 {
 	"_id": "unknown_egmh9p.atria_delta",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "timeout",
 	"script": "unknown_egmh9p.atria_delta",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088945634,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085887045,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 20,
+	"next_scrape": 1569178607615,
+	"category": "risk_factor",
+	"last_update": 1569088945634,
+	"output": [
+		{
+			"args": {},
+			"calls": 1754,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"stem ",
+				"rror ",
+				"Y Thi",
+				"BODY T",
+				" erajb",
+				"ndari |",
+				"most of",
+				"e: re: "
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 162,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"stem ",
+				"rror ",
+				"Y Thi",
+				"BODY T",
+				" erajb",
+				"ndari |",
+				"most of",
+				"e: re: "
+			]
 		}
 	]
 }
