--- a/unknown_ky881b.xfer.json
+++ b/unknown_ky881b.xfer.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ky881b.xfer",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "unknown_ky881b.xfer",
 	"sector": "VNP_9275",
 	"sec_level": 4,
@@ -12,5 +12,7 @@
 			"type": "added",
 			"when": 1569085645113
 		}
-	]
+	],
+	"updt": 1569085661801,
+	"edit": 1
 }
