--- a/unknown_ll1h7z.fishie_tank.json
+++ b/unknown_ll1h7z.fishie_tank.json
@@ -1,16 +1,69 @@
 {
 	"_id": "unknown_ll1h7z.fishie_tank",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_ll1h7z.fishie_tank",
 	"sector": "VNP_9275",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088745156,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569088805156,
+	"category": "plant_sim",
+	"last_update": 1569088745156,
+	"output": [
+		{
+			"args": {},
+			"calls": 1242,
+			"base": "c:\"tluzmp\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				" in o",
+				"uce di",
+				"rator-",
+				"onitor",
+				"irect ",
+				"ement i",
+				" direct",
+				"itored s"
+			],
+			"hits": [
+				{
+					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"frags": [
+						" in o",
+						"uce di",
+						"rator-",
+						"onitor",
+						"irect ",
+						"ement i",
+						" direct",
+						"itored s"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"frags": [
+				" in o",
+				"uce di",
+				"rator-",
+				"onitor",
+				"irect ",
+				"ement i",
+				" direct",
+				"itored s"
+			]
 		}
 	]
 }
