--- a/unknown_tnh771.reload.json
+++ b/unknown_tnh771.reload.json
@@ -1,16 +1,72 @@
 {
 	"_id": "unknown_tnh771.reload",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "unknown_tnh771.reload",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569088564167,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569088624167,
+	"category": "fishie_tank",
+	"last_update": 1569088564167,
+	"output": [
+		{
+			"args": {},
+			"calls": 7779,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				" to b",
+				"ives' ",
+				"o be th",
+				"I that s",
+				" that su",
+				" AI that"
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 1425,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				" to b",
+				"ives' ",
+				"o be th",
+				"I that s",
+				" that su",
+				" AI that"
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 2605,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				" to b",
+				"ives' ",
+				"o be th",
+				"I that s",
+				" that su",
+				" AI that"
+			]
 		}
 	]
 }
